# middleware

./: .clang-format  .gitignore  CMakeLists.txt  README.md
incl/fastdds/: rpc_ros_sub.h
incl/rpc/: rpc_base.h  rpc_client.h  rpc_common.h  rpc_data.h
incl/rpc/fastdds/: rpc_ros_pub.h  rpc_ros_pub_sub.h
src/fastdds/: ByteArrayTypeObjectSupport.hpp  rpc_ros_pub.cpp  rpc_ros_sub.cpp
src/rpc/: rpc_base.cpp  rpc_client.cpp  rpc_data.cpp
src/rpc/fastdds/: ByteArray.hpp  ByteArray.idl  ByteArrayCdrAux.hpp  ByteArrayCdrAux.ipp  ByteArrayPubSubTypes.cxx  ByteArrayPubSubTypes.hpp  ByteArrayTypeObjectSupport.cxx  rpc_ros_pub.cpp  rpc_ros_pub_sub.cpp  rpc_ros_sub.cpp
tool/: tool_rpc_ros_pub.cpp  tool_rpc_ros_sub.cpp
